Add two days summary

--- a/_posts/2020-03-08-week06.md
+++ b/_posts/2020-03-08-week06.md
@@ -3,6 +3,22 @@ layout: post
 title: Week 6
 ---
 
+# Atom: Getting Started in FOSS
+The time has come in our course to focus on getting our feet wet and making real contributions to the world of Free and Open Source Software (FOSS). To this end the class has been partitioned into groups of 3-4 members, and I count myself extremely lucky to have been teamed up with [Boubacar](https://hunter-college-ossd-spr-2020.github.io/boubascript-weekly/) and [Jessica](https://hunter-college-ossd-spr-2020.github.io/wongjessica-weekly/). The blogs they maintain (click their names!) give only a taste of the fun collaboration and serious know-how they bring to the table. The following is the daily logs of efforts to jump into a project of our choosing.
+
+### Monday, March 2
+The beginning of the week found the three of us debating the merits - from language familiarity and activity to the offering, or lack thereof, of points of entry for a beginner contributor - of a long list of projects. After what felt like a lightning review round, we found ourselves torn over three projects: Atom, Visual Studio Code, and Django. All seemed to be of a similar viability for us: they are all quite active, have a friendly and welcoming community, grabbed our attention, and had no obvious red flags in terms of technologies involved. While I am certainly the weakest of us three when it comes to JavaScript, I cannot say that my strength in Python convinced me that Django was going to be an excellent choice for us either, as none of us have experience in developing web frameworks. We resolved to give the projects some further thought over the next couple of days. That said, I was pretty soon turned off to the idea of Visual Studio Code, when I discovered that same day that contributing to the project would involve us signing a Microsoft Contributor Licensing Agreement (CLA).
+
+### Wednesday, March 4
+A bit more discussion took place via text with Boubacar making another project solid suggestion: Electron. Atom is, after all, written in Electron so we weren't really going far off the mark!
+
+### Thursday, March 5
+D-Day ("Decision Day")...except we again left class rather undecided! Thankfully this didn't last too long as Boubacar and I had an extensive discussion about how Atom or Visual Studio Code had the benefit of being a program that we could easily work on and 
+
+### Saturday, March 7
+
+
+### Sunday, March 8 
 
 # Other Course-Related Activity:
 This week I proposed [edits](https://github.com/hunter-college-ossd-spr-2020/Ks5810-weekly/pull/5) to and opened an [issue](https://github.com/hunter-college-ossd-spr-2020/Ks5810-weekly/issues/6) on [Keisuke's blog](https://hunter-college-ossd-spr-2020.github.io/Ks5810-weekly/). Continuing on my recent streak of adding nearby restaurants I enjoy and would like to support to OSM, I [added a local Italian restaurant](https://www.openstreetmap.org/changeset/81936488).
