Complete march 5 summary

--- a/_posts/2020-03-08-week06.md
+++ b/_posts/2020-03-08-week06.md
@@ -13,7 +13,7 @@ The beginning of the week found the three of us debating the merits - from langu
 A bit more discussion took place via text with Boubacar making another project solid suggestion: Electron. Atom is, after all, written in Electron so we weren't really going far off the mark!
 
 ### Thursday, March 5
-D-Day ("Decision Day")...except we again left class rather undecided! Thankfully this didn't last too long as Boubacar and I had an extensive discussion about how Atom or Visual Studio Code had the benefit of being a program that we could easily work on and 
+D-Day ("Decision Day")...except we again left class rather undecided! Thankfully this didn't last too long as Boubacar and I had an extensive discussion about how Atom or Visual Studio Code had the benefit of being an app that we could "easily" work on and test, as opposed to the Django or Electron frameworks, upon which apps will ultimately be based. With some further discussion and all three of us agreed, we turned our attention to our final project decision: Atom.
 
 ### Saturday, March 7
 
