Complete weekly blog

--- a/_posts/2020-03-08-week06.md
+++ b/_posts/2020-03-08-week06.md
@@ -16,9 +16,18 @@ A bit more discussion took place via text with Boubacar making another project s
 D-Day ("Decision Day")...except we again left class rather undecided! Thankfully this didn't last too long as Boubacar and I had an extensive discussion about how Atom or Visual Studio Code had the benefit of being an app that we could "easily" work on and test, as opposed to the Django or Electron frameworks, upon which apps will ultimately be based. With some further discussion and all three of us agreed, we turned our attention to our final project decision: Atom.
 
 ### Saturday, March 7
+For better or for worse, I am a sort of a sit down and just hammer out one task kind of guy. I fully realize that it is most likely for the worse: stepping away from a task sometimes yields remarkable insight, and the fabled bolt of inspiration when doing something else is quite real in my experience. That said, time constraints and semester workload being what they are, I sat down to hammer out learning more about Atom and setting up a development environment. The ongoing result of the former - a joint effort - can be found [here](https://hackmd.io/@drizhekGSpqvVRsSWVyXNA/BkbIno0EI). Following up on this is going to be my primary task over the next couple of days; I plan to devour knowledge on Atom's organization and philosophy by reading through the friendly...though * *ahem* * slightly vague...["flight manual"](https://flight-manual.atom.io). This brings me to the topic of a multiple hour experience of throwing enough Node at the wall and hoping some of it sticks!
 
+Granted, I am a complete beginner with it comes to working with the Node JavaScript runtime environment, so any course of errors I was likely to run into would have been really problematic for me. In particular, I ran face first into the classic case of multiple hidden problems when the general running assumption is that there is one primary problem (such as a missing dependency or incorrect version) when I tried to run the scripts/bootstrap script to install needed dependencies. To be quite reductionist, I learned three critical things in this experience:
+
+- Do **NOT** put spaces in your folder names. Why this horrible habit lingers, I know not, but I was lucky to catch that one key hangup in the install process was that some files could not be found...past a folder of mine that had a space in the name. Friends don't let friends use spaces in their folder names.
+- While the Atom Flight Manual states that any version of Node greater than version 6 should be fine, this is absolutely not the case. Versions 13 (newest) and 12 (newest LTS) will not cooperate, whereas version 10 inexplicably does. Removing the "inexplicably" from the previous sentence is another goal of the coming few days.
+- Unfortunately not that many people have reported issues with setting up a development version of Atom: it is unclear if that is because not many try, or because they had a much easier time of it than me.
+
+Ultimately, I was able to set up and run a development version of Atom based on the cloned repository, but how stable this will be is unclear. The bootstrapping process, while ultimately completed, resulted in a number of warnings of which I do not know the consequence. My plan is to share experiences with Boubacar and Jessica, before moving on to what may very well prove to be test and build processes equally littered with errors.
 
 ### Sunday, March 8 
+The last note for the week was the small relief gained by knowing that I was not alone in dependency issues with Node. Diagnosing this process is going to have to become a proper group effort this week.
 
 # Other Course-Related Activity:
 This week I proposed [edits](https://github.com/hunter-college-ossd-spr-2020/Ks5810-weekly/pull/5) to and opened an [issue](https://github.com/hunter-college-ossd-spr-2020/Ks5810-weekly/issues/6) on [Keisuke's blog](https://hunter-college-ossd-spr-2020.github.io/Ks5810-weekly/). Continuing on my recent streak of adding nearby restaurants I enjoy and would like to support to OSM, I [added a local Italian restaurant](https://www.openstreetmap.org/changeset/81936488).
