Small change to ending

--- a/_posts/2020-03-08-week06.md
+++ b/_posts/2020-03-08-week06.md
@@ -27,7 +27,7 @@ Granted, I am a complete beginner with it comes to working with the Node JavaScr
 Ultimately, I was able to set up and run a development version of Atom based on the cloned repository, but how stable this will be is unclear. The bootstrapping process, while ultimately completed, resulted in a number of warnings of which I do not know the consequence. My plan is to share experiences with Boubacar and Jessica, before moving on to what may very well prove to be test and build processes equally littered with errors.
 
 ### Sunday, March 8 
-The last note for the week was the small relief gained by knowing that I was not alone in dependency issues with Node. Diagnosing this process is going to have to become a proper group effort this week.
+The last note for the week was the small relief gained by knowing that I was not alone in dependency issues with Node. Diagnosing this process is going to have to become a proper group effort this week, before we can really move on to what issues are of interest to the group.
 
 # Other Course-Related Activity:
 This week I proposed [edits](https://github.com/hunter-college-ossd-spr-2020/Ks5810-weekly/pull/5) to and opened an [issue](https://github.com/hunter-college-ossd-spr-2020/Ks5810-weekly/issues/6) on [Keisuke's blog](https://hunter-college-ossd-spr-2020.github.io/Ks5810-weekly/). Continuing on my recent streak of adding nearby restaurants I enjoy and would like to support to OSM, I [added a local Italian restaurant](https://www.openstreetmap.org/changeset/81936488).
