fixed two typos in daniel's blog, added a comma and changed 'are' to 'is'

--- a/_posts/2020-02-23-week04.md
+++ b/_posts/2020-02-23-week04.md
@@ -5,7 +5,7 @@ title: Week 4
 
 This week I will be listing open source software projects I have reviewed as 
 candidates for receiving contributions in the Open Source Software course's final 
-project. Below each I will list a very, very reduced form of some of the 
+project. Below each, I will list a very, very reduced form of some of the 
 defining characteristics of an open source project, and check off where a 
 project does, or does not, meet these criteria.
 
@@ -35,7 +35,7 @@ challenge which required the use of it. Personally, I have been working with it
 since last summer, and am therefore disappointed, though not terribly surprised,
 that the project doesn't appear to check all the boxes below. ROS documentation
 is more generally all over the place, literally and in terms of quality. There 
-are an abundance of repositories and not only is it not clear where to begin, but not
+is an abundance of repositories and not only is it not clear where to begin, but not
 every repository seems to have a license, readme, or even clues on where else 
 to look. Even though I use C++ and Python, ROS is a very complex undertaking and my 
 impression is, depending on where one tries to launch into it, contributing 
