Add first part of OS not about you response

--- a/_posts/2020-03-15-week07.md
+++ b/_posts/2020-03-15-week07.md
@@ -1,3 +1,14 @@
+While my previous blog entries have not been limited to a single topic, this week will feature more topics than usual, as there is simply a lot of learning to dicuss. I'll be sharing thoughts on setting boundaries in the world of open source software and contributing to Wikipedia, my continuing my log of my project research, and, of course, mention all other open source work that I've been up to. 
+
+# OSS: Open Source Stress
+Recently I had the pleasure of reading an interesting opinion piece - in the form of a [Github Gist](https://gist.github.com/richhickey/1563cddea1002958f96e7ba9519972d9) - provocatively named "Open Source Is Not About You" and written by Rich Hickey, who is the creator of the Clojure programming language and CTO of Cognitect. More on him, the language and the company can be found [here](https://clojure.org). If, like me, you've been browsing the Internet long enough, you may do what I did and jump right to the comments before even reading the text of the piece, expecting a heated warzone of keyboard warriors. While the comments section is not without some dissenting opinions, and I cannot claim to have reviewed every comment, I can say that I was rather surprised to see that the section was actually largely dominated by supporters saying thank you for what Hickey had expressed. This led me back to reading the actual content of the piece and found a sentiment that I wasn't surprised by, but have now heard expressed for the first time in the world of open source software.
+
+At the risk of reductionism, Hickey's point is largely captured by his apt title, and his words serve as a keen reminder that many endeavors require respecting healthy boundaries and being transparent about our intentions. While we may not all have been in his position and while it is hard to be specific without further knowledge of Clojure's community experience, it is not overly difficult to understand the frustrations that must still arise from having started an open source project, having taken some steps to interact with a community that has built up around it, yet having to deal with a seemingly endless stream of questions, requests, and, at worst, complaints. In particular the following section stands out to me: 
+
+<center><i>Open source is a licensing and delivery mechanism, period. It means you get the source for software and the right to use and modify it. All social impositions associated with it, including the idea of 'community-driven-development' are part of a recently-invented mythology with little basis in how things actually work, a mythology that embodies, cult-like, both a lack of support for diversity in the ways things can work and a pervasive sense of communal entitlement.</i></center>
+
+The tone is terse and scathing - and I can't say I disagree with him - but it highlights to me 
+
 
 # Wikipedia:
 
