--- a/_posts/2020-03-15-week07.md
+++ b/_posts/2020-03-15-week07.md
@@ -7,8 +7,11 @@ At the risk of reductionism, Hickey's point is largely captured by his apt title
 
 <center><i>Open source is a licensing and delivery mechanism, period. It means you get the source for software and the right to use and modify it. All social impositions associated with it, including the idea of 'community-driven-development' are part of a recently-invented mythology with little basis in how things actually work, a mythology that embodies, cult-like, both a lack of support for diversity in the ways things can work and a pervasive sense of communal entitlement.</i></center>
 
-The tone is terse and scathing - and I can't say I disagree with him - but it highlights to me 
+The tone is terse and scathing - and I can't say I disagree with him - but in it I find a familiar narrative. Some of the YouTubers I have watched over the years have been quite honest with their audiences about dealing with similar struggles. While we can debate the sincerity of a particular creator's claims of just creating content "for themselves" or just in the interest of sharing, it seems as though many creators have found themselves wrestling with their new "public" positions and the communities that have grown around them. Prepared creators can be honest and transparent up front, setting clear boundaries of what will or will not impact what they create (it is remarkable how many viewers try to lecture YouTube creators on personal matters of taste), but all seem to have to fight some frustrations and the ever-present threat of burnout. Why? Some may point to a feeling of self-entitlement, as Hickey does. I think this certainly plays a role, but want to add that I think there is also a certain, now misguided, sense of those with such "power" must equally respect their responsibilities. This sort of dynamic may hold weight when it comes to enormous corporations - think of our ever present concern to keep the "media" honest and balanced - but, even then, those are *moral* concerns. I don't think anything that would be classified as a *feature request* deserves to be called a *moral imperative* and given the same demanding tone. Further, there is no great imbalance of power here! You in particular may not know how to program, but the wide accessibility of computers and programming resources offers a way to change that. Moreover, open source creators have made it easy for you - they have given you the code *and* the permission to modify it! 
 
+<center><i>"Just because someone open sources something does not imply they owe the world a change in their status, focus and effort, e.g. from inventor to community manager."</i></center>
+
+Some may contend that these creators owe something to their communities, but I think what that exactly is can be very hard to define. A cure for a medical condition is one thing; here the better analogy may be a work of art. Imagine all of the viewers of the Mona Lisa (or these days...selfie-takers-in-front-of-the-Mona-Lisa?) gathered around Da Vinci as he worked: asking questions, demanding changes and raising an uproar. Would you envy his position? 
 
 # Wikipedia:
 
