Add course project notes

--- a/_posts/2020-03-15-week07.md
+++ b/_posts/2020-03-15-week07.md
@@ -5,11 +5,13 @@ Recently I had the pleasure of reading an interesting opinion piece - in the for
 
 At the risk of reductionism, Hickey's point is largely captured by his apt title, and his words serve as a keen reminder that many endeavors require respecting healthy boundaries and being transparent about our intentions. While we may not all have been in his position and while it is hard to be specific without further knowledge of Clojure's community experience, it is not overly difficult to understand the frustrations that must still arise from having started an open source project, having taken some steps to interact with a community that has built up around it, yet having to deal with a seemingly endless stream of questions, requests, and, at worst, complaints. In particular the following section stands out to me: 
 
-<center><i>Open source is a licensing and delivery mechanism, period. It means you get the source for software and the right to use and modify it. All social impositions associated with it, including the idea of 'community-driven-development' are part of a recently-invented mythology with little basis in how things actually work, a mythology that embodies, cult-like, both a lack of support for diversity in the ways things can work and a pervasive sense of communal entitlement.</i></center>
+<center><i>Open source is a licensing and delivery mechanism, period. It means you get the source for software and the right to use and modify it. All social impositions associated with it, including the idea of 'community-driven-development' are part of a recently-invented mythology with little basis in how things actually work, a mythology that embodies, cult-like, both a lack of support for diversity in the ways things can work and a pervasive sense of communal entitlement.</i></center> 
+<center>- Rich Hickey </center>
 
 The tone is terse and scathing - and I can't say I disagree with him - but in it I find a familiar narrative. Some of the YouTubers I have watched over the years have been quite honest with their audiences about dealing with similar struggles. While we can debate the sincerity of a particular creator's claims of just creating content "for themselves" or just in the interest of sharing, it seems as though many creators have found themselves wrestling with their new "public" positions and the communities that have grown around them. Prepared creators can be honest and transparent up front, setting clear boundaries of what will or will not impact what they create (it is remarkable how many viewers try to lecture YouTube creators on personal matters of taste), but all seem to have to fight some frustrations and the ever-present threat of burnout. Why? Some may point to a feeling of self-entitlement, as Hickey does. I think this certainly plays a role, but want to add that I think there is also a certain, now misguided, sense of those with such "power" must equally respect their responsibilities. This sort of dynamic may hold weight when it comes to enormous corporations - think of our ever present concern to keep the "media" honest and balanced - but, even then, those are *moral* concerns. I don't think anything that would be classified as a *feature request* deserves to be called a *moral imperative* and given the same demanding tone. Further, there is no great imbalance of power here! You in particular may not know how to program, but the wide accessibility of computers and programming resources offers a way to change that. Moreover, open source creators have made it easy for you - they have given you the code *and* the permission to modify it! 
 
 <center><i>"Just because someone open sources something does not imply they owe the world a change in their status, focus and effort, e.g. from inventor to community manager."</i></center>
+<center>- Rich Hikey</center>
 
 Some may contend that these creators owe something to their communities, but I think what that exactly is can be very hard to define. A cure for a medical condition is one thing; here the better analogy may be a work of art. Imagine all of the viewers of the Mona Lisa (or these days...selfie-takers-in-front-of-the-Mona-Lisa?) gathered around Da Vinci as he worked: asking questions, demanding changes and raising an uproar. Would you envy his position? 
 
@@ -17,8 +19,10 @@ Some may contend that these creators owe something to their communities, but I t
 
 # FOSS Project Log:
 ### Saturday, March 14
+Saturday's work on our course final project consisted primarily of reading the Atom Flight Manual and having an extended (remote) meeting with Boubacar and Jessica. My ongoing summary of the manual and our joint notes can be found [here](https://hackmd.io/@drizhekGSpqvVRsSWVyXNA/BkbIno0EI). Before we could effectively hunt down issues on Github and identify opportunities for contribution, we have been trying to get our heads around the Atom project as a whole, something which has proven to not be a simple matter. Key to understanding Atom is the knowledge that what the average user would download from the [Atom website](https://atom.io) is known as the **default** distribution, but it itself consists of the **core packages** (not to be confused with Atom core). Extending Atom involves installing additional, **community packages**. (Atom is wonderfully extensible and modular in this way.) Thus even what greets you on day one of using Atom consists of multiple packages: the core package for the actual text editing area, tree view (the filesystem browsers on the left), the welcome guide package, etc. 
 
+The obvious impression, as we had, is: great - there is plenty of room for contributions! Indeed, that does seem to be true, but navigating these packages and finding potential issues requires some intelligent searching. Some packages can be found in the primary Atom repository in the Atom Github organization, while others remain sibling repos in the organization, complicating the contributor workflow. Our review of this situation lead us to this [document](https://github.com/atom/atom/blob/master/docs/rfcs/003-consolidate-core-packages.md) on consolidating the packages - helping on this front is a possible, but unlikely avenue of approach. 
 
-### Sunday, March 15
+One of the "sibling" repositories of note, however, is the Atom Flight Manual repository, which is somewhat active and does have issues as contributors seek to improve its quality. It struck us that we already have some insight - due to our development setup woes - on where this manual can be improved! To that end, we are targeting our efforts on continuing to read the manual - to best understand the whole project - and also focusing on the manual as our first place to contribute. Hopefully by next week, we'll have some small changes queued up for submission to help us get our feet wet, our names out there, and the creative spirit flowing. In the meanwhile, we've taken a smaller step in this direction by requesting access to the Atom community Slack, so we can begin to really get in and take the pulse of the project.
 
 # Other Course-Related Activity:
