Change intro and course related activity

--- a/_posts/2020-03-15-week07.md
+++ b/_posts/2020-03-15-week07.md
@@ -1,4 +1,4 @@
-While my previous blog entries have not been limited to a single topic, this week will feature more topics than usual, as there is simply a lot of learning to dicuss. I'll be sharing thoughts on setting boundaries in the world of open source software and contributing to Wikipedia, my continuing my log of my project research, and, of course, mention all other open source work that I've been up to. 
+While my previous blog entries have not been limited to a single topic, this week will feature more topics than usual, as there is simply a lot of learning to dicuss. I'll be sharing thoughts on setting boundaries in the world of open source software and contributing to Wikipedia, as well as continuing my log of my project research.
 
 # OSS: Open Source Stress
 Recently I had the pleasure of reading an interesting opinion piece - in the form of a [Github Gist](https://gist.github.com/richhickey/1563cddea1002958f96e7ba9519972d9) - provocatively named "Open Source Is Not About You" and written by Rich Hickey, who is the creator of the Clojure programming language and CTO of Cognitect. More on him, the language and the company can be found [here](https://clojure.org). If, like me, you've been browsing the Internet long enough, you may do what I did and jump right to the comments before even reading the text of the piece, expecting a heated warzone of keyboard warriors. While the comments section is not without some dissenting opinions, and I cannot claim to have reviewed every comment, I can say that I was rather surprised to see that the section was actually largely dominated by supporters saying thank you for what Hickey had expressed. This led me back to reading the actual content of the piece and found a sentiment that I wasn't surprised by, but have now heard expressed for the first time in the world of open source software.
@@ -26,3 +26,4 @@ The obvious impression, as we had, is: great - there is plenty of room for contr
 One of the "sibling" repositories of note, however, is the Atom Flight Manual repository, which is somewhat active and does have issues as contributors seek to improve its quality. It struck us that we already have some insight - due to our development setup woes - on where this manual can be improved! To that end, we are targeting our efforts on continuing to read the manual - to best understand the whole project - and also focusing on the manual as our first place to contribute. Hopefully by next week, we'll have some small changes queued up for submission to help us get our feet wet, our names out there, and the creative spirit flowing. In the meanwhile, we've taken a smaller step in this direction by requesting access to the Atom community Slack, so we can begin to really get in and take the pulse of the project.
 
 # Other Course-Related Activity:
+I am calling this week a "week of rest" on the additional contributions front, as I have struggled during this time to catch up on this semester's workload. Time regained from not having to commute has helped, but deadlines continue to creep up!
