--- a/_posts/2020-03-15-week07.md
+++ b/_posts/2020-03-15-week07.md
@@ -17,13 +17,14 @@ Some may contend that these creators owe something to their communities, but I t
 
 # Wikipedia:
 
+
 # FOSS Project Log:
 ### Saturday, March 14
 Saturday's work on our course final project consisted primarily of reading the Atom Flight Manual and having an extended (remote) meeting with Boubacar and Jessica. My ongoing summary of the manual and our joint notes can be found [here](https://hackmd.io/@drizhekGSpqvVRsSWVyXNA/BkbIno0EI). Before we could effectively hunt down issues on Github and identify opportunities for contribution, we have been trying to get our heads around the Atom project as a whole, something which has proven to not be a simple matter. Key to understanding Atom is the knowledge that what the average user would download from the [Atom website](https://atom.io) is known as the **default** distribution, but it itself consists of the **core packages** (not to be confused with Atom core). Extending Atom involves installing additional, **community packages**. (Atom is wonderfully extensible and modular in this way.) Thus even what greets you on day one of using Atom consists of multiple packages: the core package for the actual text editing area, tree view (the filesystem browsers on the left), the welcome guide package, etc. 
 
 The obvious impression, as we had, is: great - there is plenty of room for contributions! Indeed, that does seem to be true, but navigating these packages and finding potential issues requires some intelligent searching. Some packages can be found in the primary Atom repository in the Atom Github organization, while others remain sibling repos in the organization, complicating the contributor workflow. Our review of this situation lead us to this [document](https://github.com/atom/atom/blob/master/docs/rfcs/003-consolidate-core-packages.md) on consolidating the packages - helping on this front is a possible, but unlikely avenue of approach. 
 
-One of the "sibling" repositories of note, however, is the Atom Flight Manual repository, which is somewhat active and does have issues as contributors seek to improve its quality. It struck us that we already have some insight - due to our development setup woes - on where this manual can be improved! To that end, we are targeting our efforts on continuing to read the manual - to best understand the whole project - and also focusing on the manual as our first place to contribute. Hopefully by next week, we'll have some small changes queued up for submission to help us get our feet wet, our names out there, and the creative spirit flowing. In the meanwhile, we've taken a smaller step in this direction by requesting access to the Atom community Slack, so we can begin to really get in and take the pulse of the project.
+One of the "sibling" repositories of note, however, is the Atom Flight Manual repository, which is somewhat active and does have issues as contributors seek to improve its quality. It struck us that we already have some insight - due to our development setup woes (particularly relating to Node versioning) - on where this manual can be improved! To that end, we are targeting our efforts on continuing to read the manual - to best understand the whole project - and also focusing on the manual as our first place to contribute. Hopefully by next week, we'll have some small changes queued up for submission to help us get our feet wet, our names out there, and the creative spirit flowing. In the meanwhile, we've taken a smaller step in this direction by requesting access to the Atom community Slack, so we can begin to really get in and take the pulse of the project.
 
 # Other Course-Related Activity:
 I am calling this week a "week of rest" on the additional contributions front, as I have struggled during this time to catch up on this semester's workload. Time regained from not having to commute has helped, but deadlines continue to creep up!
