Add Wikipedia notes

--- a/_posts/2020-03-15-week07.md
+++ b/_posts/2020-03-15-week07.md
@@ -16,7 +16,9 @@ The tone is terse and scathing - and I can't say I disagree with him - but in it
 Some may contend that these creators owe something to their communities, but I think what that exactly is can be very hard to define. A cure for a medical condition is one thing; here the better analogy may be a work of art. Imagine all of the viewers of the Mona Lisa (or these days...selfie-takers-in-front-of-the-Mona-Lisa?) gathered around Da Vinci as he worked: asking questions, demanding changes and raising an uproar. Would you envy his position? 
 
 # Wikipedia:
+This week, in preparation for contributing to Wikipedia in the near future, I read Wikipedia's [Contributing to Wikipedia](https://en.wikipedia.org/wiki/Wikipedia:Contributing_to_Wikipedia#Getting_started), [A primer for newcomers](https://en.wikipedia.org/wiki/Wikipedia:A_primer_for_newcomers) and [Help:Talk Pages](https://en.wikipedia.org/wiki/Help:Talk_pages). I must admit, I found the first two of these documents to be overwhelming (to the point of being counterproductve) in terms of sheer volume of content. Obviously Wikipedia is not a brand new project, its scope is not small and the amount of guidelines, concepts, and editing workflows is considerable. But personally I believe such a wall of text on a newcomer "primer" is too much: I found myself having to take a step back, clear my mind, and try to carefully go through the sections. Knowing that there are in-depth discussions of every aspect of working with / on Wikipedia is reassuring - I may not know everything about checking spelling and grammar on an article now, but I know I can go find a page on the topic - but that is what the primer should cover: the very basics and where to hunt down specific information. If the concern is that new contributors will make many common mistakes...which frequently stem from a failure to read the documents...well greeting them with such a lengthy document is unlikely to get them to read everything to avoid those mistakes.
 
+Rant aside, I was able to glean that Wikipedia manages their own equivalent of a beautifully tagged Github Issues tab, despite the huge disparity in size, needs and varied material compared to large, professional codebases. While I did find the multitude of guidelines and practices regarding new articles, article requests and "research", off-putting, this helped narrow my focus on revising articles in need of help: either grammatical or in terms of citations. To that end I was able to find a [list of "Vital" articles](https://en.wikipedia.org/wiki/Wikipedia:Vital_articles) which cover significant topics but need help to gain (or regain) a better quality status, a [very extensive list of articles in need of citations](https://en.wikipedia.org/wiki/Category:All_articles_with_unsourced_statements), as well as, interestingly enough, the [News and Open Tasks page of the Military History WikiProject](https://en.wikipedia.org/wiki/Wikipedia:WikiProject_Military_history/Open_tasks), which lists military history articles in need of work. Given that, to this day, I particularly enjoy military history, I will likely be scouring the last link first over the next several days to find articles to which I can happily contribute.
 
 # FOSS Project Log:
 ### Saturday, March 14
