Add post header to week 07 blog

--- a/_posts/2020-03-15-week07.md
+++ b/_posts/2020-03-15-week07.md
@@ -1,3 +1,8 @@
+---
+layout: post
+title: Week 7
+---
+
 While my previous blog entries have not been limited to a single topic, this week will feature more topics than usual, as there is simply a lot of learning to dicuss. I'll be sharing thoughts on setting boundaries in the world of open source software and contributing to Wikipedia, as well as continuing my log of my project research.
 
 # OSS: Open Source Stress
