Add to structure

--- a/_posts/2020-03-22-week08.md
+++ b/_posts/2020-03-22-week08.md
@@ -3,8 +3,13 @@ layout: post
 title: Week 8
 ---
 
-# COVID-19 and the Open Source Software Course
+# COVID-19 and the Open Source Software Course:
+
 
 # FOSS Project Log:
+### Friday, March 20
+
+### Saturday, March 21
 
 # Other Course-Related Activity:
+This week we were tasked with making our first two edits to Wikipedia articles. Per last week's blog, where
