Add other course related activity

--- a/_posts/2020-03-22-week08.md
+++ b/_posts/2020-03-22-week08.md
@@ -12,4 +12,4 @@ title: Week 8
 ### Saturday, March 21
 
 # Other Course-Related Activity:
-This week we were tasked with making our first two edits to Wikipedia articles. Per last week's blog, where
+This week we were tasked with making our first two edits to Wikipedia articles. Per last week's blog, where I mentioned some starting places of interest, I went to work on [military history articles](https://en.wikipedia.org/wiki/Wikipedia:WikiProject_Military_history/Open_tasks) in need of revision. My first two contributions are listed under the contributions tab, and I will be discussing the article searching and editing experience in next week's blog. 
