Add project blog

--- a/_posts/2020-03-22-week08.md
+++ b/_posts/2020-03-22-week08.md
@@ -8,8 +8,12 @@ title: Week 8
 
 # FOSS Project Log:
 ### Friday, March 20
+On Friday I continued to review the [Atom Flight Manual](https://flight-manual.atom.io). Reading the Manual is a bit of a balancing act between learning, and looking for valid issues with the document, that my project team and I can tackle as fixes. Finding the latter if you're focused so deep you can't see the forest for the trees can be a real problem. Therefore, where I believed a technical example, as with the package creation sections (ex: ["Package: Word Count"](https://flight-manual.atom.io/hacking-atom/sections/package-word-count/)), would help my understanding of Atom's functionality and use of web technologies, I read in depth. (I only have minor experience with web development, and really no experience with the intersection of web and native applications using Electron, so I am trying to pick up what I can, where I can.) Where the Manual touched on casual customizations or aspects with which I am unlikely to have any interaction, I skimmed. Thankfully, through this, I did manage to find a few instances where the Manual would greatly benefit from images or additional  explanation of concepts, some of which are not even defined at all. Those issues, now split into sections into categories of active work (see below), for later review, or resolved, can, as always, be found in our [online notes](https://hackmd.io/@drizhekGSpqvVRsSWVyXNA/BkbIno0EI).
 
 ### Saturday, March 21
+Saturday featured an over two hour call with Jessica and Boubacar to review our next steps and discuss what potential issues we had come upon. (Hence the aforementioned partitioning of our issues into the different status groups.) The one item that continued to stand out above all others is the set of problems with the ["Hacking the Atom Core"](https://flight-manual.atom.io/hacking-atom/sections/hacking-on-atom-core/) section of the Flight Manual. This was our first stop in getting a development version of Atom set up, and we have since come to understand that it is *not* a good first-stop for anyone interested in contributing to Atom. First and foremost, the section is very unclear as to what is actually involved in setting up a *development version* of Atom, because of an underlying assumption that the reader has already *downloaded and installed* a pre-built version of Atom. (Nowhere in the Manual does it specify that this is required.) Thus, a new reader is likely come to the same conclusion as us, that getting involved is as simple as cloning the repository and running the bootstrap script. (The requirements for even running the bootsrap script are down in the build section, and should definitely be relocated.) No purpose is given for the following build section, and none will seem obvious to a new reader. But, as Boubacar realized, the build section is, in fact, vital. Because of the aforementioned assumption, the Manual misses the point and suggests that what is important to get started on developing for Atom is running Atom in dev mode, which...cannot be done if you do not have a compiled version of Atom. 
+
+Refining these thoughts into a concrete text revision proposal will take some further time, but, as we realized, submitting this and other helpful additions as issues, which we will volunteer to tackle, must of course come first. We are not the first to point out concerns with the "Hacking the Atom Core" section - see [this issue](https://github.com/atom/flight-manual.atom.io/issues/482) - and in fact our next agreed-upon task is to review existing issues to make sure we are not duplicating anything, but we are hoping that a reaffirmation of difficulty with this section, combined with proposals for changes, will get the needed attention. While we are wrapping up our review of the Manual and submitting these issues, we also aim to look back at the "Core" repositories with greater knowledge, and see where we can dive into programming issues. 
 
 # Other Course-Related Activity:
 This week we were tasked with making our first two edits to Wikipedia articles. Per last week's blog, where I mentioned some starting places of interest, I went to work on [military history articles](https://en.wikipedia.org/wiki/Wikipedia:WikiProject_Military_history/Open_tasks) in need of revision. My first two contributions are listed under the contributions tab, and I will be discussing the article searching and editing experience in next week's blog. 
